// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bedrock-compat complex: complex 1`] = `
"import bedrock from '@uber/bedrock';
import middleware from './middleware';
import routes from './routes';
import _ from 'lodash';

export default function startServer(options = {}, cb) {
  const server = bedrock.createServer(options);
  setInterval(() => {
    bedrock.loadConfig(options);
  }, 1000);
  middleware(server);
  routes(server);
  server.listen(cb);
  return server;
}


      ↓ ↓ ↓ ↓ ↓ ↓

import middleware from './middleware';
import routes from './routes';
import _ from 'lodash';
export default function startServer(server, cb) {
  setInterval(() => {
    bedrock.loadConfig(options);
  }, 1000);
  middleware(server);
  routes(server);
  server.listen(cb);
  return server;
}
"
`;

exports[`bedrock-compat positive-match: positive-match 1`] = `
"import bedrock from '@uber/bedrock';
import middleware from './middleware';
import routes from './routes'; // -----------------

export default function startServer(options = {}, cb) {
  const server = bedrock.createServer(options);
  middleware(server);
  routes(server);
  server.listen(cb);
  return server;
}


      ↓ ↓ ↓ ↓ ↓ ↓

import middleware from './middleware';
import routes from './routes'; // -----------------

export default function startServer(server, cb) {
  middleware(server);
  routes(server);
  server.listen(cb);
  return server;
}
"
`;
